ipc/ipdl/test/ipdl/error/ManagerForgot.ipdl
//error: |manager| declaration in protocol `ForgottenManagee' does not match any |manages| declaration in protocol `ManagerForgot'

include protocol ForgottenManagee;

// See ForgottenManagee.ipdl. This includes ForgottenManagee to
// ensure that loading this file fails.

[ChildProc=any]
protocol ManagerForgot {
child:
    async Msg();
};
